--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   "homepage": "https://github.com/AlecMunguia/liri-node-app#readme",
   "devDependencies": {
     "dotenv": "^8.0.0"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "moment": "^2.24.0",
+    "node-spotify-api": "^1.1.1"
   }
 }
